--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       color: var(--text-main);
       min-height: 100vh;
     }
+.contact-btn {
+  display: inline-block;
+  margin-top: 8px;
+  background: var(--accent);
+  color: #020617;
+  padding: 10px 16px;
+  border-radius: 999px;
+  font-size: 13px;
+  font-weight: 500;
+}
 
     a {
       color: inherit;
@@ -483,9 +493,14 @@
           </li>
           <li>
             <span>Portfolio</span>
-          <a href="https://github.com/Subhanubalakrishnan" target="_blank" style="color:#2f7f7a;font-weight:500;">
-    View My Work →
-  </a>
+         <a href="https://github.com/Subhanubalakrishnan" target="_blank" class="contact-btn">
+View My Work →
+</a>
+
+<a href="Subhanu_Balakrishnan_Resume_2025.pdf" download class="contact-btn">
+⬇ Download Resume
+</a>
+
           </li>
         </ul>
 
